# dummy

./: README.rst  dummy.spec  pyproject.toml
dummy/: dummy.py
