[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Dummy User"]

[tool.poetry.dependencies]
python = "<3.11,>=3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
